# structer

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.PTBR.md  README.md  pyproject.toml
.githooks/: pre-push
.github/workflows/: cd.yml  ci.yml
structer/: __init__.py  errors.py  field.py  fieldtype.py  struct.py
structer/fieldtypes/: base.py  char.py  string.py
tests/: test_fieldtype.py
