[tool.poetry]
name = "structer"
version = "0.1.0"
description = "Structer is a structurer written in Python based on C language structs."
authors = ["Lelzin λ <d3cryptofc@gmail.com>"]
lincense = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-sugar = "^1.0.0"
mypy = "^1.13.0"
taskipy = "^1.14.0"
ruff = "^0.7.2"
pytest-cov = "^6.0.0"

[tool.ruff]
line-length = 79
indent-width = 4

[tool.ruff.lint]
select = ["F", "W", "E", "I"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
